--- a/uart-can-relay/Cargo.toml
+++ b/uart-can-relay/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-embassy-stm32 = { version = "0.2.0", features = [ "defmt", "time-driver-any", "stm32g0b1ke", "memory-x", "unstable-pac", "exti"]  }
+embassy-stm32 = { version = "0.2.0", features = [ "defmt", "time", "time-driver-any", "stm32g0b1ke", "memory-x", "unstable-pac", "exti"]  }
 embassy-sync = { version = "0.6.2", features = ["defmt"] }
 embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }
-embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
+embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }
 embassy-futures = { version = "0.1.0" }
 
 defmt = "0.3"
@@ -22,6 +22,7 @@ portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }
 embedded-hal = "0.2.6"
 embedded-io-async = { version = "0.6.1" }
 embedded-can = "0.4.1"
+static_cell = "2.1.0"
 
 [profile.release]
 debug = 2
