--- a/tmtc-air/Cargo.toml
+++ b/tmtc-air/Cargo.toml
@@ -24,7 +24,7 @@ embedded-io-async = { version = "0.6.1" }
 embedded-can = "0.4.1"
 static_cell = "2.1.1"
 
-south-common = { version = "0.2.0", git = "ssh://git@github.com/S2outh/south-common.git" }
+south-common = { version = "0.2.0", features = ["g0"], git = "ssh://git@github.com/S2outh/south-common.git" }
 
 [profile.release]
 debug = 2
